--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "bloggd",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "next": "16.1.1",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.1",
-    "tailwindcss": "^4"
-  }
+	"name": "bloggd",
+	"version": "1.0.0",
+	"description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+	"main": "index.js",
+	"directories": {
+		"lib": "lib"
+	},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "next dev",
+		"build": "next build",
+		"postinstall": "prisma generate"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"type": "module",
+	"dependencies": {
+		"@prisma/adapter-pg": "^7.2.0",
+		"@prisma/client": "^7.2.0",
+		"bcryptjs": "^3.0.3",
+		"dotenv": "^17.2.3",
+		"next": "^16.1.1",
+		"pg": "^8.16.3",
+		"prisma": "^7.2.0",
+		"react": "^19.2.3",
+		"react-dom": "^19.2.3"
+	}
 }
