--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"dependencies": {
 		"@prisma/adapter-pg": "^7.2.0",
 		"@prisma/client": "^7.2.0",
+		"@tailwindcss/postcss": "^4.1.18",
 		"bcryptjs": "^3.0.3",
 		"dotenv": "^17.2.3",
 		"next": "^16.1.1",
@@ -26,5 +27,10 @@
 		"prisma": "^7.2.0",
 		"react": "^19.2.3",
 		"react-dom": "^19.2.3"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.23",
+		"postcss": "^8.5.6",
+		"tailwindcss": "^4.1.18"
 	}
 }
